[metadata]
  name = icmplib
  version = 3.0.3
  description = The power to forge ICMP packets and do ping and traceroute.
  keywords = icmp, sockets, ping, multiping, traceroute, async, asyncio, ipv4, ipv6, python, python3

  author = Valentin BELYN
  author_email = valentin-hello@gmx.com

  long_description = file: README.md
  long_description_content_type = text/markdown
  url = https://github.com/ValentinBELYN/icmplib

  license = GNU Lesser General Public License v3.0
  license_file = LICENSE

  classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
  packages = icmplib
  python_requires = >=3.7
